--- a/AkademiQPortfolio/Views/Shared/Components/_DefaultNavbarComponentPartial/Default.cshtml
+++ b/AkademiQPortfolio/Views/Shared/Components/_DefaultNavbarComponentPartial/Default.cshtml
@@ -1,6 +1,6 @@
 ﻿<header class="header">
 	<div class="top clearfix">
-		<a href="#section8" class="available"><i class="ion-ios-email-outline"></i><span>YAPIM AŞAMASINDA</span></a>
+		<a href="" class="available"><i class="ion-ios-email-outline"></i><span>Bir mesaj uzağınızdayım!</span></a>
 		<div class="right-icons">
 			<a href="" class="open-search header-open-search"><i class="md md-search"></i></a>
 			<a href="" class="download"><i class="md md-file-download"></i></a>
